# astrocomputing

./: .readthedocs.yaml  .readthedocs.yml  Makefile  README.md  pyproject.toml  requirements.txt
astrocomputing/: __init__.py
book/: requirements.txt
book/source/: conf.py
docs/: makepdflatex.sh  requirements.txt
docs/source/: conf.py  index.rst  references.rst  test.ipynb
docs/source/chapter_astronomical_data/: formats.rst  index.rst  ndarray.ipynb
docs/source/chapter_basics/: index.rst  operation_system.rst  python.rst  section_python.rst
docs/source/chapter_high_performance/: index.rst
docs/source/chapter_introduction/: index.rst
docs/source/chapter_numeric_methods/: index.rst  linear_algebra.rst
docs/source/chapter_numerical_methods/: index.rst  linear_algebra.ipynb
docs/source/chapter_scientific_computing/: MF04_ch02_root_finding.ipynb  MF04_ch03_solving_AX=B.ipynb  MF04_ch04_interpolation.ipynb  MF04_ch05_curve_fitting.ipynb  MF04_ch06_numerical_differentiation.ipynb  MF04_ch07_numerical_integration.ipynb  MF04_ch08_numerical_optimization.ipynb  MF04_ch09_solution_of_ODEs.ipynb  MF04_ch11_eigenvalues_and_eigenvectors.ipynb  index.rst  scientific-python-matplotlib.ipynb  scientific-python-numpy.ipynb  scientific-python-scipy.ipynb
docs/source/chapter_scientific_python/: index.rst  matplotlib.rst  numpy.rst  scipy.rst
