[project]
name = "astrocomputing"
description = "Astronomical Computing"
version = "0.0.1"
authors = [
    { name = "Bo Zhang", email = "bozhang@nao.cas.cn" }
]
#dependencies = [
#    "pyspark[ml]",
#    "sklearn"
#]

#[project.optional-dependencies]
#dev = [
#    "tox",
#    "pre-commit",
#    "bump2version"
#]

[tool.poetry.packages]
include = ["astrocomputing"]
exclude = ["ref"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
